tests/suite/snapshots/suite__check__tests__check__bad-global1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-global1.xi:1:10]
   │
 1 │ x: int = y
   ·          ┬  
   ·          ╰── Unbound variable y
───╯

